@@ -15,42 +15,42 @@
       <table align=left>
 
 	<tr><td><font size=-1>
-	   <a href="index.html">
+	   <a href="%(html_base)s/index.html">
 	    <b>Welcome</b></a><br>
 	  </font></td></tr>
 	<tr><td height=5></td></tr>
 
 	<tr><td bgcolor="%(caption_color)s"><b>Overview</b></td></tr>
 	<tr><td><font size=-1>
-	   <a href="domains.html">
+	   <a href="%(html_base)s/domains.html">
 	    <b>The Packages</b></a><br>
-	   <a href="teams.html">
+	   <a href="%(html_base)s/teams.html">
 	    <b>The Teams</b></a><br>
-	   <a href="whydisclaim.html">
+	   <a href="%(html_base)s/whydisclaim.html">
 	    <b>The&nbsp;Disclaimer</b></a><br>
-	   <a href="robot.html">
+	   <a href="%(html_base)s/robot.html">
 	    <b>The Robot</b></a><br>
 	  </font></td></tr>
 	<tr><td height=5></td></tr>
 
 	<tr><td bgcolor="%(caption_color)s"><b>Info for...</b></td></tr>
 	<tr><td><font size=-1>
-	   <a href="maintainers.html">
+	   <a href="%(html_base)s/maintainers.html">
 	    <b>Maintainers</b></a><br>
-	   <a href="leaders.html">
+	   <a href="%(html_base)s/leaders.html">
 	    <b>Coordinators</b></a><br>
-	   <a href="translators.html">
+	   <a href="%(html_base)s/translators.html">
 	    <b>Translators</b></a><br>
 	 </font></td></tr>
 	<tr><td height=5></td></tr>
 
 	<tr><td bgcolor="%(caption_color)s"><b>Documents</b></td></tr>
 	<tr><td><font size=-1>
-	   <a href="thanks.html">
+	   <a href="%(html_base)s/thanks.html">
 	    <b>Contributors</b></a><br>
-	   <a href="files.html">
+	   <a href="%(html_base)s/files.html">
 	    <b>File List</b></a><br>
-	   <a href="software.html">
+	   <a href="%(html_base)s/software.html">
 	    <b>Tools</b></a><br>
 	 </font></td></tr>
 	<tr><td height=5></td></tr>
